--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,133 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image-card {
+  width: 700px;
+  min-height: 500px;
+  max-height: auto;
+  float: left;
+  margin: 3px;
+  padding: 3px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.frame {
+  position:relative;
+  padding:0;
+  margin:0;
+  border:solid 15px; 
+  max-width:600px;
+  margin:0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+img {
+  display:block;
+  padding:0;
+  margin:0;
+  width:100%;
+  height:auto;
+  border-top:solid 2px #aaa;
+  border-left:solid 2px #aaa;
+  border-bottom:solid 2px #ccc;
+  border-right:solid 2px #ccc;
+}
+
+.innards {
+  background-color:lightgrey;
+  border-style: outset;
+  border-color: black;
+  border-width: 3px;
+  width: 300px;
+  display: inline-block;
+  padding-bottom: 5px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+h3 {
+  background-color: rgba(0,0,0,0.65);
+  position: absolute;
+  color: #FFF;
+  z-index: 1;
+}
+
+.cart-cont {
+  margin-top: 100px;
+}
+
+.cart {
+  background-color: lightgrey;
+  width: 500px;
+  display: inline-block;
+  font-size: 20px;
+}
+
+.cart-item {
+  border: black;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 20px;
+  height: 40px;
+  padding-top: 7px
+}
+
+.total { 
+  border: black;
+  border-style: solid;
+  border-width: 2px;
+  background-color: lightgrey;
+  width: 500px;
+  height: 80px;
+  padding-top: 30px;
+  font-size: 50px;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  margin: 0 auto;
+}
+
+.total-paypal {
+  border: black;
+  border-style: solid;
+  border-width: 2px;
+  background-color: lightgrey;
+  width: 754px;
+  height: 80px;
+  padding-top: 30px;
+  font-size: 50px;
+  border-top-width: 2px;
+  margin: 0 auto;
+}
+
+.your-cart {
+  border: black;
+  border-style: solid;
+  border-width: 2px;
+  background-color: lightgrey;
+  width: 500px;
+  height: 80px;
+  padding-top: 30px;
+  font-size: 50px;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  margin: 0 auto;
+  border-radius: 25px 25px 0px 0px;
+}
+
+.login-form {
+  width: 500px;
+  display: inline-block;
+  margin-top:100px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.like {
+  position: absolute;
+  z-index: 5;
+  margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about {
+  color: white;
+  font-size: 20px;
+  width: 800px;
+  display: inline-block;
 }
